update layout structures

--- a/drtools-internal-dependencies.html
+++ b/drtools-internal-dependencies.html
@@ -64,7 +64,8 @@
 <script src="js/drtools/drtools-utils.js"></script>
 
 <section class="ftco-section">
-    <div class="container font_chord">
+    <div class="container font_chord"></div>
+</section>
 
 <script type="text/javascript">
 if (!optionsProject.datasetInternalDependencies || 0 === optionsProject.datasetInternalDependencies.length === ''
@@ -160,8 +161,6 @@ else {
     d3.select(self.frameElement).style("height", "1200px").style("width", "1600px");
 }
 </script>
-</div>
-</section>
 
 </body>
 </html>
