--- a/drtools-namespace-dependenciesI.html
+++ b/drtools-namespace-dependenciesI.html
@@ -94,8 +94,11 @@
 	<script src="js/scrollax.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/drtools/drtools-utils.js"></script>
+
+    <section class="ftco-section" id="graph-section">                
+        <div id="graph" style="text-align: center;"></div>
+    </section>
     
-    <div id="graph" style="text-align: center;"></div>
     <script>
     if (!optionsProject.datasetNamespaceDependencyI || 0 === optionsProject.datasetNamespaceDependencyI.length === ''
                 || !doesFileExist(optionsProject.datasetNamespaceDependencyI)) {
