--- a/drtools-namespace-dependenciesII.html
+++ b/drtools-namespace-dependenciesII.html
@@ -98,7 +98,10 @@
     <script src="js/main.js"></script>
     <script src="js/drtools/drtools-utils.js"></script>
     
-    <svg width="1300" height="800"></svg>
+    <section class="ftco-section" id="graph-section">                
+        <svg width="1300" height="800"></svg>
+    </section>
+    
     <script>
     if (!optionsProject.datasetNamespaceDependencyII || 0 === optionsProject.datasetNamespaceDependencyII.length === ''
                 || !doesFileExist(optionsProject.datasetNamespaceDependencyII)) {
