--- a/drtools-type-coupling1.html
+++ b/drtools-type-coupling1.html
@@ -103,6 +103,10 @@
     <script src="js/main.js"></script>
     <script src="js/drtools/drtools-utils.js"></script>
 
+    <section class="ftco-section" id="graph-section">                
+        <svg></svg>    
+    </section>
+    
 <script>
 if (!optionsProject.datasetInternalTypeDependencies || 0 === optionsProject.datasetInternalTypeDependencies.length === ''
                 || !doesFileExist(optionsProject.datasetInternalTypeDependencies)) {
